# afropythonconf-talk

./: README.md  db.sqlite3  manage.py  pyproject.toml
afroapp/: asgi.py  settings.py  urls.py  wsgi.py
blog/: apps.py  decorators.py  helper.py  middleware.py  models.py  signals.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: create.html  detail.html  detail_middleware.html  index.html  invalid_id_error.html
tests/: test_afroapp_django.py
