[tool.poetry]
name = "afropython-django"
version = "0.1.0"
description = ""
authors = ["David Carlos <ddavidcarlos1392@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
